--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,9 @@
   <meta name="apple-mobile-web-app-title" content="rentycars_nour">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <meta name="mobile-web-app-capable" content="yes">
+  <!-- Remove this line if it exists -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
