--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
 
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="../assets/images/464708620_122130025214377003_3953818083517380944_n.jpg" />
 
   <title>rentycars_nour</title>
   <link rel="manifest" href="manifest.json">
